--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,23 @@ backcall==0.1.0
 bleach==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
+colorama==0.4.1
 decorator==4.4.0
 defusedxml==0.5.0
 entrypoints==0.3
 html5lib==1.0.1
 idna==2.8
 ipykernel==5.1.0
-ipython==7.5.0
+ipython==7.3.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
 isodate==0.6.0
 jedi==0.13.3
 Jinja2==2.10.1
 jsonschema==3.0.1
+jupyter==1.0.0
 jupyter-client==5.2.4
+jupyter-console==6.0.0
 jupyter-core==4.4.0
 jupyterhub==0.9.4
 jupyterlab==0.35.4
@@ -29,11 +32,12 @@ MarkupSafe==1.1.1
 mistune==0.8.4
 nbconvert==5.4.1
 nbformat==4.4.0
-notebook==5.7.8
+notebook==5.7.6
 nteract-on-jupyter==2.0.12
+owlready2==0.17.0
 pamela==1.0.0
 pandocfilters==1.4.2
-parso==0.4.0
+parso==0.3.4
 pexpect==4.7.0
 pickleshare==0.7.5
 prometheus-client==0.6.0
@@ -41,20 +45,23 @@ prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 Pygments==2.3.1
 pyparsing==2.4.0
-pyrsistent==0.15.1
+pyrsistent==0.14.11
 python-dateutil==2.8.0
 python-editor==1.0.4
 python-oauth2==1.1.0
+pywinpty==0.5.5
 pyzmq==18.0.1
+qtconsole==4.4.3
 rdflib==4.2.2
 requests==2.21.0
 Send2Trash==1.5.0
+setuptools==40.8.0
 six==1.12.0
 SPARQLWrapper==1.8.2
 SQLAlchemy==1.3.3
 terminado==0.8.2
 testpath==0.4.2
-tornado==6.0.2
+tornado==6.0.1
 traitlets==4.3.2
 urllib3==1.24.2
 wcwidth==0.1.7
