--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ Jinja2==2.10.1
 jsonschema==3.0.1
 jupyter-client==5.2.4
 jupyter-core==4.4.0
-jupyterhub==0.9.4
+jupyterhub>=0.9.6
 jupyterlab==0.35.4
 jupyterlab-server==0.2.0
 keepalive==0.5
